--- a/LanguageSchool/Views/Question/Index.cshtml
+++ b/LanguageSchool/Views/Question/Index.cshtml
@@ -25,8 +25,48 @@
                 </th>
             </tr>
 
+            @foreach (var openQuestion in Model.OpenQuestions)
+            {
+                <tr>
+                    <td>
+                        @openQuestion.CreationDate.ToString("yyyy/MM/dd")
+                    </td>
+                    <td>
+                        @Html.DisplayFor(cq => openQuestion.Contents)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(cq => openQuestion.Points)
+                    </td>
+                </tr>
+            }
+        </table>
+    </div>
+    <div class="row col-md-12">
+        <div class="thumbnail col-md-4">
+            <strong>Pytania zamknięte</strong>
+        </div>
+    </div>
+    <div class="thumbnail row col-md-12">
+        <table class="table table-striped table-bordered">
+            <tr>
+                <th>
+                    Utworzono
+                </th>
+                <th>
+                    Treść
+                </th>
+                <th>
+                    Punkty
+                </th>
+                <th>
+                    Odpowiedzi
+                </th>
+            </tr>
+
             @foreach (var closedQuestion in Model.ClosedQuestions)
             {
+                var questionAnswers = closedQuestion.Answers.Where(a => !a.IsDeleted).ToList();
+
                 <tr>
                     <td>
                         @closedQuestion.CreationDate.ToString("yyyy/MM/dd")
@@ -37,13 +77,27 @@
                     <td>
                         @Html.DisplayFor(cq => closedQuestion.Points)
                     </td>
+                    <td>
+                        <ul>
+                        @foreach (var answer in questionAnswers)
+                        {
+                            if (answer.IsCorrect)
+                            {
+                                <li style="color:forestgreen">
+                                    @answer.AnswerContent
+                                </li>
+                            }
+                            else
+                            {
+                                <li>
+                                    @answer.AnswerContent
+                                </li>
+                            }
+                        }
+                        </ul>
+                    </td>
                 </tr>
             }
         </table>
-    </div>
-    <div class="row col-md-12">
-        <div class="thumbnail col-md-4">
-            <strong>Pytania zamknięte</strong>
-        </div>
     </div>
 </div>
