--- a/LanguageSchool/Views/Question/Index.cshtml
+++ b/LanguageSchool/Views/Question/Index.cshtml
@@ -42,6 +42,11 @@
         </table>
     </div>
     <div class="row col-md-12">
+        <div class="col-md-3" style="float:right">
+            <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("CreateOpen", "Question", new { lessonSubjectId = Model.LessonSubjectId })'">Utwórz nowe</button>
+        </div>
+    </div>
+    <div class="row col-md-12">
         <div class="thumbnail col-md-4">
             <strong>Pytania zamknięte</strong>
         </div>
@@ -99,5 +104,10 @@
                 </tr>
             }
         </table>
+    </div>
+    <div class="row col-md-12">
+        <div class="col-md-3" style="float:right">
+            <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("CreateClosed", "Question", new { lessonSubjectId = Model.LessonSubjectId })'">Utwórz nowe</button>
+        </div>
     </div>
 </div>
