--- a/LanguageSchool/Views/Question/AddAnswers.cshtml
+++ b/LanguageSchool/Views/Question/AddAnswers.cshtml
@@ -10,14 +10,13 @@
 {
     @Html.AntiForgeryToken()
 
-    @Html.HiddenFor(model => model.CurrentAnswer)
     @Html.HiddenFor(model => model.Contents)
     @Html.HiddenFor(model => model.Points)
     @Html.HiddenFor(model => model.LessonSubjectId)
 
-    var CurrentAnswer = Model.CurrentAnswer - 1;
+    var curr = Model.Answers.Count - 1;
 
-    for (var i = 0; i < CurrentAnswer; i++)
+    for (var i = 0; i < curr; i++)
     {
         @Html.HiddenFor(model => model.Answers[i].Answer)
         @Html.HiddenFor(model => model.Answers[i].IsCorrect)
@@ -50,7 +49,7 @@
             </div>
         </div>
         
-        @if (CurrentAnswer >= 1)
+        @if (curr >= 1)
         {
             <div class="row thumbnail col-md-12">
                 <table class="table table-striped table-bordered">
@@ -59,7 +58,7 @@
                             Pytania
                         </th>
                     </tr>                    
-                    @for (var i = 0; i < CurrentAnswer; i++)
+                    @for (var i = 0; i < curr; i++)
                     {
                         <tr>
                             <td>
@@ -78,7 +77,7 @@
                         <strong>Treść</strong>
                     </div>
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Answers[CurrentAnswer].Answer, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.EditorFor(model => model.Answers[curr].Answer, new { htmlAttributes = new { @class = "form-control" } })
                     </div>
                 </div>
             </div>
@@ -88,7 +87,7 @@
                         <strong>Poprawna</strong>
                     </div>
                     <div class="col-md-8">
-                        @Html.CheckBoxFor(model => model.Answers[CurrentAnswer].IsCorrect)
+                        @Html.CheckBoxFor(model => model.Answers[curr].IsCorrect)
                     </div>
                 </div>
             </div>
