--- a/LanguageSchool/Views/Question/CreateClosed.cshtml
+++ b/LanguageSchool/Views/Question/CreateClosed.cshtml
@@ -22,6 +22,28 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <div class="control-label col-md-4">
+                        <strong>Treść</strong>
+                    </div>
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <div class="control-label col-md-4">
+                        <strong>Liczba wyświetlanych odpowiedzi</strong>
+                    </div>
+                    <div class="col-md-8">
+                        @Html.EditorFor(model => model.NumberOfPossibleAnswers, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.NumberOfPossibleAnswers, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <div class="control-label col-md-4">
                         <strong>Punkty</strong>
                     </div>
                     <div class="col-md-8">
@@ -33,11 +55,11 @@
             <div class="col-md-6">
                 <div class="form-group">
                     <div class="control-label col-md-4">
-                        <strong>Treść</strong>
+                        <strong>Wielokrotnego wyboru</strong>
                     </div>
                     <div class="col-md-8">
-                        @Html.EditorFor(model => model.Contents, new { htmlAttributes = new { @class = "form-control" } })
-                        @Html.ValidationMessageFor(model => model.Contents, "", new { @class = "text-danger" })
+                        @Html.EditorFor(model => model.IsMultichoice, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.IsMultichoice, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
