--- a/LanguageSchool/Views/Question/AddAnswers.cshtml
+++ b/LanguageSchool/Views/Question/AddAnswers.cshtml
@@ -35,39 +35,45 @@
         </div>
         <div class="row thumbnail col-md-12">
             <div class="row">
-                <div class="col-md-3">
-                    <label>
-                        Treść
-                    </label>
-                </div>
-                <div class="col-md-3">
-                    @Html.DisplayFor(model => model.Contents)
-                </div>
-                <div class="col-md-3">
-                    <label>
-                        Punkty
-                    </label>
-                </div>
-                <div class="col-md-3">
-                    @Html.DisplayFor(model => model.Points)
+                <div class="form-group">
+                    <div class="control-label col-md-2">
+                        <strong>Treść</strong>
+                    </div>
+                    <div class="col-md-10">
+                        @Html.DisplayFor(model => model.Contents)
+                    </div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-md-3">
-                    <label>
-                        Liczba wyświetlanych odpowiedzi
-                    </label>
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <div class="control-label col-md-7">
+                            <strong>Wyświetlane</strong>
+                        </div>
+                        <div class="col-md-3">
+                            @Html.DisplayFor(model => model.NumberOfPossibleAnswers)
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    @Html.DisplayFor(model => model.NumberOfPossibleAnswers)
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <div class="control-label col-md-7">
+                            <strong>Punkty</strong>
+                        </div>
+                        <div class="col-md-3">
+                            @Html.DisplayFor(model => model.Points)
+                        </div>
+                    </div>
                 </div>
-                <div class="col-md-3">
-                    <label>
-                       Wielokrotnego wyboru
-                    </label>
-                </div>
-                <div class="col-md-3">
-                    @Html.DisplayFor(model => model.IsMultichoice)
+                <div class="col-md-4">
+                    <div class="form-group">
+                        <div class="control-label col-md-7">
+                            <strong>Wielokrotnego wyboru</strong>
+                        </div>
+                        <div class="col-md-3">
+                            @Html.DisplayFor(model => model.IsMultichoice)
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
