--- a/LanguageSchool/Views/Question/AddAnswers.cshtml
+++ b/LanguageSchool/Views/Question/AddAnswers.cshtml
@@ -115,6 +115,7 @@
                     </div>
                     <div class="col-md-8">
                         @Html.EditorFor(model => model.Answers[curr].Answer, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.Answers[curr].Answer, "", new { @class = "text-danger" })
                     </div>
                 </div>
             </div>
