Bajer dla strony domowej - odnośnik do numeru telefonu oraz adresu email szkoły

--- a/LanguageSchool/Views/Home/Index.cshtml
+++ b/LanguageSchool/Views/Home/Index.cshtml
@@ -39,7 +39,8 @@
                     </li>
                     <li>
                         <p>
-                            <span class="glyphicon glyphicon-phone"/> 404-112-461 <span class="glyphicon glyphicon-envelope"/> Be.Lingua@gmail.com
+                            <span class="glyphicon glyphicon-phone" /> <a style="color: white;" href="tel:404-112-461"> 404-112-461 </a><span class="glyphicon glyphicon-envelope" />
+                            <a style="color: white;" href="mailto:Be.Lingua@gmail.com"> Be.Lingua@gmail.com</a>
                         </p>
                     </li>
                 </ul>
