Dalsze zmiany dla wyglądu podglądu

--- a/LanguageSchool/Views/Course/FullDetails.cshtml
+++ b/LanguageSchool/Views/Course/FullDetails.cshtml
@@ -7,10 +7,10 @@
 
 <div class="container">
     <div class="row col-md-12">
-        <div class="thumbnail col-md-2">
-            <div class="col-md-offset-1">
-                <h5><strong>Dane kursu</strong></h5>
-            </div>
+        <div class="col-md-1">
+        </div>
+        <div class="thumbnail col-md-2" style="text-align:center;">
+            <font size="4"><strong>Dane kursu</strong></font>
         </div>
     </div>
     <div class="row thumbnail col-md-12">
