--- a/LanguageSchool/Views/Course/FullDetails.cshtml
+++ b/LanguageSchool/Views/Course/FullDetails.cshtml
@@ -6,13 +6,7 @@
 }
 
 <div class="container">
-    <div class="row col-md-12">
-        <div class="col-md-1">
-        </div>
-        <div class="thumbnail col-md-2" style="text-align:center;">
-            <font size="4"><strong>Dane kursu</strong></font>
-        </div>
-    </div>
+    @{ Html.RenderPartial("_PartHeader", "Dane kursu"); }
     <div class="row thumbnail col-md-12">
         <div class="row form-group">
             <div class="control-label col-md-2">
@@ -81,9 +75,9 @@
     </div>
 
     <div class="row col-md-12">
-        <div class="col-md-5">
+        <div class="col-md-6">
         </div>
-        <div class="thumbnail col-md-6">
+        <div class="col-md-6">
             <div class="col-md-3">
                 <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "Course")'">Edytuj</button>
             </div>
@@ -109,6 +103,11 @@
     @if (Model.Groups.Any())
     {
         <p />
+        <div class="row col-md-12">
+            <div class="col-md-4">
+                @{ Html.RenderPartial("_PartHeader", "Grupy przypisane do kursu"); }
+            </div>
+        </div>
         <div class="row thumbnail col-md-12">
             <table class="table table-striped table-bordered">
                 <tr>
