--- a/LanguageSchool/Views/Group/FullDetails.cshtml
+++ b/LanguageSchool/Views/Group/FullDetails.cshtml
@@ -6,16 +6,7 @@
 }
 
 <div class="container">
-    <div class="row col-md-12">
-        <div class="thumbnail col-md-4">
-            <div class="col-md-6">
-                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "Group")'">Edytuj</button>
-            </div>
-            <div class="col-md-6">
-                <button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("Delete", "Group")'">Usuń</button>
-            </div>
-        </div>
-    </div>
+    @{ Html.RenderPartial("_PartHeader", "Dane grupy"); }
     <div class="row thumbnail col-md-12">
         <div class="row">
             <div class="col-md-3">
@@ -58,6 +49,17 @@
             </div>
         </div>
     </div>
+    <div class="row col-md-12">
+        <div class="col-md-4 col-md-offset-8">
+            <div class="col-md-6">
+                <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("Edit", "Group")'">Edytuj</button>
+            </div>
+            <div class="col-md-6">
+                <button class="btn btn-block btn-danger" type="button" onclick="location.href='@Url.Action("Delete", "Group")'">Usuń</button>
+            </div>
+        </div>
+    </div>
+    @{ Html.RenderPartial("_PartHeader", "Godziny zajęć"); }
     <div class="row thumbnail col-md-12">
         <table class="table table-striped table-bordered">
             <tr>
@@ -81,13 +83,15 @@
             }
         </table>
     </div>
+
     <div class="row col-md-12">
-        <div class="thumbnail col-md-3">
-            <button class="btn btn-block btn-default" type="button" onclick="location.href='@Url.Action("AddUsers", "Group")'">Zapisz nowych uczniów</button>
+        <div class="col-md-2 col-md-offset-9">
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("AddUsers", "Group")'">Dodaj nowych uczniów</button>
         </div>
     </div>
     @if (Model.Students.Any())
     {
+        Html.RenderPartial("_PartHeader", "Studenci");
         <div class="row thumbnail col-md-12">
             <table class="table table-striped table-bordered">
                 <tr>
