--- a/LanguageSchool/Views/Group/FullDetails.cshtml
+++ b/LanguageSchool/Views/Group/FullDetails.cshtml
@@ -83,23 +83,17 @@
             }
         </table>
     </div>
-
-    <div class="row col-md-12">
-        <div class="col-md-2 col-md-offset-9">
-            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("AddUsers", "Group")'">Dodaj nowych uczniów</button>
-        </div>
-    </div>
     @if (Model.Students.Any())
     {
-        Html.RenderPartial("_PartHeader", "Studenci");
+        Html.RenderPartial("_PartHeader", "Zapisani studenci");
         <div class="row thumbnail col-md-12">
             <table class="table table-striped table-bordered">
                 <tr>
                     <th>
-                        Utworzono
+                        Zapisano
                     </th>
                     <th>
-                        Uczeń
+                        Student
                     </th>
                 </tr>
                 @foreach (var student in Model.Students)
@@ -116,4 +110,9 @@
             </table>
         </div>
     }
+    <div class="row col-md-12">
+        <div class="col-md-4 col-md-offset-8">
+            <button class="btn btn-block btn-primary" type="button" onclick="location.href='@Url.Action("AddUsers", "Group")'">Zapisz nowych studentów</button>
+        </div>
+    </div>
 </div>
